plugins {
    id 'java-library'
    id 'application'
    id 'maven-publish'
	id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group 'com.brugalibre'
version '1.0.4-SNAPSHOT'

mainClassName = 'com.zeiterfassung.web.common.impl.navigate.BaseWebNavigator'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {

    api 'io.github.bonigarcia:webdrivermanager:5.3.1'
    api('org.seleniumhq.selenium:selenium-java:4.7.1') {
        exclude group: 'org.seleniumhq.selenium', module: 'selenium-android-driver'
        exclude group: 'org.seleniumhq.selenium', module: 'selenium-iphone-driver'
        exclude group: 'org.seleniumhq.selenium', module: 'selenium-safari-driver'
        exclude group: 'org.webbitserver', module: 'webbit'
        exclude group: 'commons-codec', module: 'commons-codec'
        exclude group: 'cglib', module: 'cglib-node'
    }

    compileOnly 'org.slf4j:slf4j-api:2.0.5'

    testImplementation group: 'junit', name: 'junit', version: '4.11'
    testImplementation group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            artifact shadowJar
        }
    }
}

shadowJar{
    archiveFileName.set("${project.name}-${project.version}.jar")
}